updated log4j.properties file

--- a/plugins/contracts/org.polarsys.chess.contracts.verificationService.test.runtime/log4j.properties
+++ b/plugins/contracts/org.polarsys.chess.contracts.verificationService.test.runtime/log4j.properties
@@ -10,7 +10,7 @@
 #  *     Alberto Debiasi - initial API and implementation
 #  ******************************************************************************/
 #-------------------------------------------------------------------------------
-# Root logger option
+# Root logger option, remove DEBUG for no messages on the console
 log4j.rootLogger=DEBUG,stdout
 
 # Direct log messages to stdout
