--- a/plugins/org.polarsys.chess.diagramsCreator/plugin.xml
+++ b/plugins/org.polarsys.chess.diagramsCreator/plugin.xml
@@ -108,6 +108,16 @@
             defaultHandler="org.polarsys.chess.diagramsCreator.commands.ArrangeHandler"
             id="org.polarsys.chess.diagramsCreator.commands.arrangeHandler"
             name="Arrange the graphical elements handler">
+         <commandParameter
+               id="loop_times"
+               name="loop_times"
+               optional="true">
+         </commandParameter>
+         <commandParameter
+               id="process_diagram"
+               name="process_diagram"
+               optional="true">
+         </commandParameter>
       </command>
       <command
             defaultHandler="org.polarsys.chess.diagramsCreator.commands.AdjustConnectorsHandler"
