--- a/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
@@ -67,6 +67,10 @@
                      id="org.eclipse.ui.main.diagramEditorMenu.CHESS.validation"
                      label="Validation">
                   <command
+                        commandId="org.polarsys.chess.verificationService.ui.commands.CheckValidationAssertionPropertyCommand"
+                        style="push">
+                  </command>
+                  <command
                         commandId="org.polarsys.chess.verificationService.commands.CheckValidationPropertyCommand2"
                         style="push">
                   </command>
@@ -120,6 +124,10 @@
                      label="Validation">
                   <command
                         commandId="org.polarsys.chess.verificationService.commands.CheckValidationPropertyCommand2"
+                        style="push">
+                  </command>
+                  <command
+                        commandId="org.polarsys.chess.verificationService.ui.commands.CheckValidationAssertionPropertyCommand"
                         style="push">
                   </command>
                   <menu
@@ -285,9 +293,9 @@
             name="Model Checking on .smv file">
       </command>
       <command
-            defaultHandler="org.polarsys.chess.verificationService.ui.commands.CheckValidationPropertyCommand"
+            defaultHandler="org.polarsys.chess.verificationService.ui.commands.CheckValidationContractPropertyCommand"
             id="org.polarsys.chess.verificationService.commands.CheckValidationPropertyCommand2"
-            name="Check Validation Property on selected component">
+            name="Check Validation on Assumption/Guarantee Properties on selected component">
       </command>
       <command
             defaultHandler="org.polarsys.chess.verificationService.ui.commands.debug.CheckValidationPropertyOnFileCommand"
@@ -303,6 +311,11 @@
             defaultHandler="org.polarsys.chess.verificationService.ui.commands.debug.RuntimeErrorsOnSMVFileCommand"
             id="org.polarsys.chess.verificationService.ui.commands.debug.RuntimeErrorsOnSMVFileCommand"
             name="Check Grammar on .smv file">
+      </command>
+      <command
+            defaultHandler="org.polarsys.chess.verificationService.ui.commands.CheckValidationAssertionPropertyCommand"
+            id="org.polarsys.chess.verificationService.ui.commands.CheckValidationAssertionPropertyCommand"
+            name="Check Validation on Properties on selected component">
       </command>
    </extension> 
 </plugin>
