Multiple IBDs are not ready yet. Emphasized in the menu command.

--- a/plugins/org.polarsys.chess.diagramsCreator/plugin.xml
+++ b/plugins/org.polarsys.chess.diagramsCreator/plugin.xml
@@ -30,7 +30,7 @@
             </command>
             <command
                   commandId="org.polarsys.chess.diagramsCreator.commands.createAllIBDs"
-                  label="Create the IBD diagrams for all the package components"
+                  label="Create the IBD diagrams for all the package components (raw version)"
                   style="push">
                <visibleWhen
                      checkEnabled="false">
