--- a/plugins/org.polarsys.chess.core/build.properties
+++ b/plugins/org.polarsys.chess.core/build.properties
@@ -8,7 +8,9 @@ bin.includes = plugin.xml,\
                schema/,\
                permissions.xml,\
                about.html,\
-               license/
+               license/,\
+               theme/
 src.includes = schema/,\
                resources/,\
-               permissions.xml
+               permissions.xml,\
+               theme/
