New property tab is loaded by default instead of the standard UML.

--- a/plugins/org.polarsys.chess.functionBehaviors.functionBehaviorEditor/plugin.xml
+++ b/plugins/org.polarsys.chess.functionBehaviors.functionBehaviorEditor/plugin.xml
@@ -6,4 +6,10 @@
 		<context contextModel="properties/UML for CHESS.ctx">
       	</context>
    </extension>
+   <extension
+         point="org.eclipse.ui.startup">
+      <startup
+            class="org.polarsys.chess.functionBehaviors.functionBehaviorEditor.StartupClass">
+      </startup>
+   </extension>
 </plugin>
