--- a/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
@@ -119,6 +119,11 @@
                         commandId="org.polarsys.chess.verificationService.commands.ExportModelToFileCommand"
                         style="push">
                   </command>
+                  <command
+                        commandId="org.polarsys.chess.verificationService.commands.ExportModelToSMVCommand"
+                        label="Export model to a monolithic SMV file"
+                        style="push">
+                  </command>
                </menu>
                <menu
                      id="org.eclipse.ui.main.menu.CHESS.validation"
@@ -318,6 +323,11 @@
             defaultHandler="org.polarsys.chess.verificationService.ui.commands.CheckValidationAssertionPropertyCommand"
             id="org.polarsys.chess.verificationService.ui.commands.CheckValidationAssertionPropertyCommand"
             name="Check Validation on Properties on selected component">
+      </command>
+      <command
+            defaultHandler="org.polarsys.chess.verificationService.ui.commands.ExportModelToMonolithicSMVCommand"
+            id="org.polarsys.chess.verificationService.commands.ExportModelToSMVCommand"
+            name="Export model as monolithic SMV file">
       </command>
    </extension> 
 </plugin>
