--- a/plugins/contracts/org.polarsys.chess.contracts.chessextension/build.properties
+++ b/plugins/contracts/org.polarsys.chess.contracts.chessextension/build.properties
@@ -18,5 +18,4 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                build.properties,\
-               icons/,\
-               resource/
+               icons/
