--- a/plugins/contracts/org.polarsys.chess.contracts.transformations/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.transformations/plugin.xml
@@ -59,6 +59,12 @@
             id="org.polarsys.chess.contracts.transformations.ftaxsap.id"
             name="FTA xSAP">
       </command>
+      <command
+            categoryId="org.polarsys.chess.contracts.category"
+            defaultHandler="org.polarsys.chess.contracts.transformations.commands.FMEAXSapHandler"
+            id="org.polarsys.chess.contracts.transformations.fmeaxsap.id"
+            name="FMEA xSAP">
+      </command>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -174,6 +180,11 @@
                          </with>
                       </or>
                    </visibleWhen>
+                </command>
+                <command
+                      commandId="org.polarsys.chess.contracts.transformations.fmeaxsap.id"
+                      label="FMEA with xSAP"
+                      style="push">
                 </command>
           	 </menu>
           </menu>
