--- a/plugins/org.polarsys.chess.smvExporter/plugin.xml
+++ b/plugins/org.polarsys.chess.smvExporter/plugin.xml
@@ -13,12 +13,27 @@
             id="org.polarsys.chess.smvExport.commands.ExportSelectedNominalSMsToSmvFilesCommand"
             name="Export state machines of selected component or its sub-components as .smv files">
       </command>
+      <command
+            defaultHandler="org.polarsys.chess.smvExporter.ui.commands.ExportModelToMonolithicSMVCommand"
+            id="org.polarsys.chess.smvExport.commands.ExportModelToSMVCommand"
+            name="Export model as monolithic SMV file">
+         <commandParameter
+               id="file_name"
+               name="FileName"
+               optional="true">
+         </commandParameter>
+      </command>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
       <menuContribution
             allPopups="false"
             locationURI="menu:org.eclipse.ui.main.menu.CHESS.basicOperation">
+	     <command
+			   commandId="org.polarsys.chess.smvExport.commands.ExportModelToSMVCommand"
+			   label="Export model to a monolithic SMV file"
+			   style="push">
+    	 </command>
          <command
                commandId="org.polarsys.chess.smvExport.commands.ExportNominalSMsToSmvFilesCommand"
                style="push">
@@ -33,6 +48,23 @@
             <command
                   commandId="org.polarsys.chess.smvExport.commands.ExportSelectedNominalSMsToSmvFilesCommand"
                   style="push">
+            </command>
+            <command
+                  commandId="org.polarsys.chess.smvExport.commands.ExportModelToSMVCommand"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <iterate
+                        ifEmpty="false"
+                        operator="and">
+                     <adapt
+                           type="org.eclipse.emf.ecore.EObject">
+                        <instanceof
+                              value="org.eclipse.uml2.uml.Package">
+                        </instanceof>
+                     </adapt>
+                  </iterate>
+               </visibleWhen>
             </command>
          </menu>
       </menuContribution>
