--- a/plugins/org.polarsys.chess.smvExporter/plugin.xml
+++ b/plugins/org.polarsys.chess.smvExporter/plugin.xml
@@ -22,6 +22,11 @@
                name="FileName"
                optional="true">
          </commandParameter>
+         <commandParameter
+               id="show_popup"
+               name="showPopup"
+               optional="true">
+         </commandParameter>
       </command>
    </extension>
    <extension
@@ -33,6 +38,10 @@
 			   commandId="org.polarsys.chess.smvExport.commands.ExportModelToSMVCommand"
 			   label="Export model to a monolithic SMV file"
 			   style="push">
+         <parameter
+               name="show_popup"
+               value="true">
+         </parameter>
     	 </command>
          <command
                commandId="org.polarsys.chess.smvExport.commands.ExportNominalSMsToSmvFilesCommand"
@@ -65,6 +74,10 @@
                      </adapt>
                   </iterate>
                </visibleWhen>
+               <parameter
+                     name="show_popup"
+                     value="true">
+               </parameter>
             </command>
          </menu>
       </menuContribution>
